# clinic-management-system

./: .clang-format  .gitignore  CMakeLists.txt  README.md  doctors.csv
data/: clinic_management_system.gresource.xml
data/clinic_management_system/: doctors.csv  patients.csv  style.css
data/clinic_management_system/applications/: com.github.TarekSaeed0.clinic_management_system.desktop
data/clinic_management_system/icons/: com.github.TarekSaeed0.clinic_management_system.res
data/clinic_management_system/ui/: doctors_list.ui  doctors_list_item.ui  list_doctors_page.ui  main_page.ui  search_doctors_page.ui  sign_in_page.ui  sign_up_page.ui  start_page.ui  ui.cmb  window.ui
include/: doctors.h  patients.h  ui.h
include/clinic_management_system/: application.h  doctors.h  patients.h
include/clinic_management_system/ui/: doctors_list.h  list_doctors_page.h  main_page.h  search_doctors_page.h  sign_in_page.h  sign_up_page.h  start_page.h
src/: doctors.c  main.c  patients.c  ui.c
src/clinic_management_system/: application.c  doctors.c  patients.c
src/clinic_management_system/ui/: doctors_list.c  list_doctors_page.c  main_page.c  search_doctors_page.c  sign_in_page.c  sign_up_page.c  start_page.c
